Fix footer height on mobile.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 140px;
+    margin-bottom: 100px;
 }
 
 .footer {
@@ -14,14 +14,13 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 81px;
-    line-height: 80px;
     color: #AAA;
     border-top: 1px solid #eee;
 }
 
 .footer ul {
     list-style: none;
-    margin: 0;
+    margin: 32px 0;
     padding: 0;
     font-size: small;
 }
